--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start",
+    "server": "json-server -d 750 -w -H 192.168.0.107 -p 3333 ./src/api/server.js"
   },
   "dependencies": {
     "expo": "~42.0.1",
@@ -21,7 +22,11 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/react": "^17.0.15",
+    "@types/react-native": "^0.64.12",
+    "json-server": "^0.16.3",
+    "typescript": "^4.3.5"
   },
   "private": true
 }
