--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/lodash": "^4.14.171",
     "@types/react": "^17.0.15",
     "@types/react-native": "^0.64.12",
     "json-server": "^0.16.3",
